fork is too high ranking in google; added a readme warning

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+WARNING
+This fork is most likely outdated. Either go to the main website 
+of the project https://pytouhou.linkmauve.fr or go to my own fork 
+https://code.govanify.com/govanify/touhou . I have not used GitHub
+for personal projects anymore nor will I keep them updated.
+You have been warned.
+
 About this project:
 -------------------
 
